[package]
name = "oss-sdk"
version = "0.1.3-rc.4"
edition = "2018"
readme = "README.md"
description = "[FORK] OSS rust SDK"
license = "Apache-2.0"
repository = "https://github.com/gaoqiangz/oss-rust"

[dependencies]
reqwest = { version = "0.12.12", features = ["stream"] }
base64 = "0.13.0"
chrono = "0.4"
log = "0.4.6"
derive_more = "0.99.5"
bytes = "1.1.0"
quick-xml = "0.23.0"
serde-xml-rs = "0.5.1"
serde_derive = "1.0.130"
serde = "1.0.130"
tokio = { version = "1.11.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }
hmac = "0.12.1"
sha1 = "0.10.5"
async-speed-limit = { version = "0.4.1", features = ["tokio"] }

[dev-dependencies]
